--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<ul class="d-inline-block">
 								<li class="mega-menu">
 									<span class="opener plus"></span>
-									<a href="index.html">Casa</a>
+									<a href="index.html">Casaxx</a>
 									<ul class="transition">
 										<li><a href="index.html">Home One</a></li>
 										<li><a href="index-2.html">Home Two</a></li>
